Fix double MenuToggle button issue and css
Fixing bugs with two menu buttons on the responsive screen Fixing the phenomenon that the scrollbar obscures the menu buttons

--- a/src/components/styles/Navbar.module.scss
+++ b/src/components/styles/Navbar.module.scss
@@ -61,6 +61,7 @@
   .MenuToggle {
     align-items: center;
     height: 100%;
+    margin-right: 1.25rem;
     .Toggle {
       background-color: #ffffff00;
       border: none;
